--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import "tailwindcss";
+
+/* 
+
 import app.css
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -68,4 +73,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
